media/css/firefox/landing/kit.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

// From https://github.com/mozilla/mozilla-type-family/blob/main/Mozilla%20Headline/Web%20Fonts/Condensed
@font-face {
    font-family: 'Mozilla Headline Condensed';
    src: url('/media/fonts/mozilla-headline/MozillaHeadlineCondensed-SemiBold.woff2') format('woff2');
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}

@font-face {
  font-family: fallback;
  src: local("Georgia");
  ascent-override: 94.4%;
  descent-override: 25.6%;
  line-gap-override: 0%;
  size-adjust: 77.44%;
}

// supports js/base/video-prefers-reduced-motion.es6.js
/* stylelint-disable block-no-empty  */
@keyframes js-check-autoplay {}

video[autoplay] {
    animation: js-check-autoplay 0s;
}

// Kit styles (unlayered to override both flare and m24)
main {
    // We need the casing to stay on X-LocaleSpecific
    /* stylelint-disable-next-line value-keyword-case */
    --title-font-family: 'Mozilla Headline Condensed', fallback, X-LocaleSpecific, sans-serif;
    --purple-light-purple: #F1E7F8; // Figma Soft Purple
    --figma-link-purple: #6132BC;
    --figma-black-4: #15141A;
    display: grid;
    row-gap: 16px;
    padding-block: 16px;


    *, *::before, *::after {
        box-sizing: border-box;
    }

    h1, h2, p, ol {
        margin-bottom: 0;
    }

    p, ol {
        line-height: 1.4;
    }

    .button {
        line-height: 1;
    }

    img,
    video {
        width: 100%;
        display: block;
    }
}

.button {
    text-decoration: none;
    /* stylelint-disable-next-line declaration-no-important */
    color:  var(--neutrals-white);
    background-color: var(--purple-purple);
    border-radius: 40px;
    font-weight: var(--font-weight-semibold);
    padding: 16px 24px;

    &:hover,
    &:focus {
        background-color: var(--purple-light-purple);
        color: var(--purple-dark-purple)
    }

    &:active {
        background-color: var(--purple-dark-purple);
        color:  var(--neutrals-white);
    }
}

.c-animation-button {
    background-color: var(--purple-light-purple);
    color: var(--figma-black-4);
    box-sizing: content-box;
    padding: 4px;

    &:hover,
    &:focus {
        background-color: var(--figma-link-purple);
        color: var(--neutrals-white);
    }

    &:active {
        background-color: var(--purple-dark-purple);
        color: var(--neutrals-white);
    }

    &[data-js-video-state="paused"] {
        .c-animation-button-play {
            display: block;
        }

        .c-animation-button-pause {
            display: none;
        }
    }

    &[data-js-video-state="playing"] {
        .c-animation-button-play {
            display: none;
        }

        .c-animation-button-pause {
            display: block;
        }
    }
}

.fl-banner-container {
    padding-block: 0; // page spacing controlled by main
}

.fl-banner {
    border-radius: 40px;

    @media (min-width: 768px) {
        border-radius: 128px;
    }

    @media (min-width: 1024px) {
        padding: 120px;
    }
}

.fl-banner-filled {
    --title-text-color: var(--neutrals-white);
}

// center the media on mobile
@media (max-width: 480px) {
    .fl-banner-brand-bottom-right {
        width: 100%;
        right: unset;
    }
}

.fl-banner-brandsize-large.fl-banner-hasbrand-bottom-right .c-animation-button {
    position: absolute;
    bottom: 80px;
    right: 10px;

    @media (min-width: 768px) {
        right: 20px;
    }

    @media (min-width: 1024px) {
        bottom: 30px;
        right: 80px;
    }
}

// Match with when .fl-banner-content-centered is overridden and layout moves to 2
@media (min-width: 1024px) {
    .fl-banner-brandsize-large.fl-banner-hasbrand-bottom-right .fl-banner-content {
        grid-column: 1 / -1;
        display: grid;
        grid-template-columns: subgrid;
    }

    .fl-banner-brandsize-large.fl-banner-hasbrand-bottom-right .fl-banner-content-inner {
        grid-column: 1 / -1;
        display: grid;
        grid-template-columns: subgrid;

        > * {
            grid-column: 1;
        }
    }

    .fl-banner-brandsize-large.fl-banner-hasbrand-bottom-right .heading {
        grid-column: 1 / -1;
    }
}

.fl-banner .heading {
    font-size: 4rem; // 64px
    font-weight: var(--font-weight-semibold);
    line-height: 0.9;
    letter-spacing: -0.6;
    @media (min-width: 768px) {
        font-size: 5rem; // 80px
    }

    @media (min-width: 1024px) {
        font-size: 8rem; // 128px
    }
}

.fl-banner-content-centered .fl-banner-content-inner {
    align-items: center; // ensure c-banner-body is centered within container
}

.c-banner-subheading {
    font-size: var(--font-size-subheading-1);
    font-weight: var(--font-weight-semibold);
    line-height: 1.1;
    margin-bottom: 30px;
}

.c-banner-body {
    max-width: 400px;
}

.c-card-gallery {
    // match width/padding to fl-banner-container
    margin-inline: auto;
    padding-inline: 40px;
    width: 100%;
    max-width: calc(var(--widths-viewport-wrapper-screen-2xl) * 1px);

    // card gallery styles
    display: flex;
    flex-direction: column;
    gap: 16px;

    @media (min-width: 1024px) {
        flex-direction: row;
    }
}

// match width/padding to fl-banner-container
@media (max-width: 767px) {
    .c-card-gallery {
        padding-inline: calc(var(--scale-24) * 1px);
    }
}
/* ... */

